--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "init-db": "node db/init-db.js",
+    "reset-db": "node reset-db.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
