--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "description": "",
   "devDependencies": {
     "concurrently": "^9.2.0"
+  },
+  "dependencies": {
+    "axios": "^1.11.0"
   }
 }
